# scope-overworld

./: .gitignore  README.md  pyproject.toml
src/scope_overworld/: __init__.py  pipeline.py  schema.py
