[project]
name = "scope-overworld"
version = "0.1.0"
description = "OverWorld plugin for Daydream Scope"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "world-engine",
]

[project.entry-points.scope]
scope-overworld = "scope_overworld"

[dependency-groups]
dev = [
    "daydream-scope",
]

[tool.uv]
override-dependencies = [
    "torch==2.9.1",
    "torchvision==0.24.1",
    "torchaudio==2.9.1",
]

[tool.uv.sources]
daydream-scope = { git = "https://github.com/daydreamlive/scope" }
world-engine = { git = "https://github.com/daydreamlive/world_engine", branch = "local-uris" }
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
